--- a/example/css/contact.css
+++ b/example/css/contact.css
@@ -28,11 +28,11 @@
 .main .text .btn {
     width: 20%;
     height: 45px;
-    margin-left: 50%;
+    margin-left: 46%;
     margin-top: 26px;
     border: 0;
     color: #fff;
-    background-color: #c81623;
+    background-color: #1692c8;
     font-size: 20px;
 }
 .main .text label {
