--- a/example/css/common.css
+++ b/example/css/common.css
@@ -35,7 +35,7 @@ input {
 .nav {
     height: 80px;
     width: 100%;
-    background-color: #b1191a;
+    background-color: #1692c8;
     padding-top: 30px;
     
 }
