--- a/example/css/common.css
+++ b/example/css/common.css
@@ -56,14 +56,14 @@ input {
     
 }
 .nav li:hover a {
-    color: #c81623;
+    color: #1692c8;
 }
 
 
 .footer {
     height: 200px;
     width: 100%;
-    background-color: #b1191a;
+    background-color: #1692c8;
     margin-top: 20px;
     
 }
