--- a/example/css/contact.css
+++ b/example/css/contact.css
@@ -1,7 +1,7 @@
 .main .info{
     height: 70px;
     width: 150px;
-    background-color: #b1191a;
+    background-color: #1692c8;
     margin-top: 20px;
     margin-left: 50%;
     padding-top: 20px;
