--- a/example/css/contact.css
+++ b/example/css/contact.css
@@ -43,7 +43,7 @@
     text-align: right;
     font-size: 22px;
     font-weight: 700;
-    color: #c81623;
+    color: #1692c8;
 }
 .main .text .content {
     width: 40%;
