--- a/example/css/loggedin.css
+++ b/example/css/loggedin.css
@@ -25,14 +25,15 @@
     border: 2px solid #999;
 }
 .main .text .btn {
-    width: 20%;
+    width: 10%;
     height: 45px;
-    margin-left: 46%;
+    margin-left: 90%;
     margin-top: 26px;
     border: 0;
     color: #fff;
     background-color: #1692c8;
     font-size: 20px;
+    text-align: center;
 }
 .main .text label {
     display: inline-block;
